hphp/test/zend/good/ext/posix/tests/posix_ttyname_variation1.php.skipif
<?php
if (!extension_loaded('posix')) {
    die('SKIP The posix extension is not loaded.');
}
?>